[Vivi, Luiza] Fixing template to be translated successfully.

--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -28,10 +28,7 @@
         <div class="page">
             <p>
             {% captureas citizens_trans %}{% trans "Ugandans" %}{% endcaptureas %}
-		    {% blocktrans %}Ureport is a free SMS-based system that allows
-                young {{ citizens_trans }} to speak out on what's happening in
-                communities across the country, and work together
-		with other community leaders for positive change.{% endblocktrans %}
+		    {% blocktrans %}Ureport is a free SMS-based system that allows young {{ citizens_trans }} to speak out on what's happening in communities across the country, and work together with other community leaders for positive change.{% endblocktrans %}
             </p>
 
             <div class="pointers">
