[Vivi, Luiza] Adding missing translation tags.

--- a/ureport/templates/ureport/national_pulse.html
+++ b/ureport/templates/ureport/national_pulse.html
@@ -60,7 +60,7 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
     <div id="loading" style="position: absolute; top: 0; left: 42%; z-index: 56; background: #ffff00;">
-        Loading National Pulse... Please wait, This may take a while.<br/>
+        {% blocktrans %}Loading National Pulse... Please wait, This may take a while.{% endblocktrans %}<br/>
         <img src="{{ MEDIA_URL }}ureport/images/ajax-loader.gif" style="padding-left: 40%">
     </div>
 
