logout and flag delete

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -102,6 +102,7 @@
                         <li><a href="{% url mp_dashboard %}">{% trans "MP BARAZA" %}</a></li>
                         <li><a href="{% url classifier %}">{% trans "A-CLASS" %}</a></li>
                         <li><a href="{% url alerts user.pk %}">{% trans "REAL TIME" %}</a></li>
+                        <li><a href="/accounts/logout">{% trans "LOGOUT" %}</a></li>
                     {% else %}
                         <li><a href="/accounts/login">{% trans "LOGIN" %}</a></li>
                     {% endif %}
