--- a/ureport/templates/ureport/flagged_message_base.html
+++ b/ureport/templates/ureport/flagged_message_base.html
@@ -16,30 +16,49 @@
 {% block extra_js %}
     {{ block.super }}
     <script src="{{MEDIA_URL}}contact/javascripts/messages.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.delete_flag').click(function(e){
+                e.preventDefault();
+                var elem = $(this);
+                var url = elem.attr('href');
+                if (confirm('Are you sure you want to delete this flag?')){
+
+                    $.get(url, function(data){
+                        if (data == 'Success'){
+
+                            elem.closest('tr').remove();
+                        }else{
+                            alert('Could not delete flag. Please try again');
+                        }
+                    });
+                }
+            });
+        })
+    </script>
 {% endblock %}
 {% block content %}
     <div class="module" style="padding-bottom: 12px;">
-    <h2>{% trans "All Flags" %}</h2>
-    <table width="100%" class="results">
-    <thead><tr><td>{% trans "name" %}</td> <td>{% trans "messages" %}</td> <td></td></tr></thead>
-    {% for flag in all_flags %}
-{% load ureport %}
-<tr><td>{{flag.name}}</td>  <td><a href={% if go_to_dashboards %}{% url aids-dashboard flag.name|cap_slugify %}{% else %}"/flags/{{ flag.pk }}/messages/"{% endif %}>{% trans "messages" %}</a></td>
-    <td><a href="/flags/{{ flag.pk }}/edit/">{% trans "edit" %}</a> </td>
-    <td><a href="/flags/{{ flag.pk }}/delete/">{% trans "delete" %}</a> </td>
-
-
-</tr>
-    {% endfor %}
-    </table>
-    <div class="buttons">
-    <a href="{% url ureport.views.create_flags %}" style="float:left">
-      <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/>{% trans "Add New Flag" %}
-    </a>
-    <a style="float:right;" href="?export=true">{% trans "Export To Excel" %}</a>
+        <h2>{% trans "All Flags" %}</h2>
+        <table width="100%" class="results">
+            <thead><tr><td>{% trans "name" %}</td> <td>{% trans "messages" %}</td> <td></td></tr></thead>
+            {% for flag in all_flags %}
+                {% load ureport %}
+                <tr>
+                    <td>{{flag.name}}</td>  <td><a href={% if go_to_dashboards %}{% url aids-dashboard flag.name|cap_slugify %}{% else %}"/flags/{{ flag.pk }}/messages/"{% endif %}>{% trans "messages" %}</a></td>
+                    <td><a href="/flags/{{ flag.pk }}/edit/">{% trans "edit" %}</a> </td>
+                    <td><a href="/flags/{{ flag.pk }}/delete/" class="delete_flag">{% trans "delete" %}</a> </td>
+                </tr>
+            {% endfor %}
+        </table>
+        <div class="buttons">
+            <a href="{% url ureport.views.create_flags %}" style="float:left">
+                <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/>{% trans "Add New Flag" %}
+            </a>
+            <a style="float:right;" href="?export=true">{% trans "Export To Excel" %}</a>
+        </div>
     </div>
-    </div>
-{{ block.super }}
+    {{ block.super }}
 
 
 {% endblock %}
