--- a/ureport/templates/ureport/partials/dashboard/poll_row.html
+++ b/ureport/templates/ureport/partials/dashboard/poll_row.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <td>
     {{object.name}}
 </td>
@@ -16,12 +17,12 @@
     <div class="buttons">
         {% if object.type == 't' or object.type == 'n' %}
             <a href="javascript:void(0)" onclick="collapse();load_report('{{ object.pk }}', '{% url poll.views.view_report object.pk %}')">
-                <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" border="0"/> Report
+                <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" border="0"/> {% trans "Report" %}
             </a>
         {% endif %}
         <a href="javascript:void(0)" onclick="collapse();load_responses('{{ object.pk }}', '{% url poll.views.view_responses object.pk %}')">
             <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" alt=""/>
-            Responses
+            {% trans "Responses" %}
             ({{object.responses__count}})
         </a>
         {% if object.type == 't'  %}
