--- a/ureport/templates/ureport/polls/view_poll.html
+++ b/ureport/templates/ureport/polls/view_poll.html
@@ -9,159 +9,180 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}contact/stylesheets/messages.css"/>
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/message_log.css"/>
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}generic/stylesheets/jquery-ui-1.7.3.custom.css"/>
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
-        <style>
-            input {
-                width: 80%;
-            }
-            input[type=submit] {
-                width: 5em;
-            }
-            input[type=checkbox] {
-                width: 1em;
-            }
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
+    <style>
+        input {
+            width: 80%;
+        }
+        input[type=submit] {
+            width: 5em;
+        }
+        input[type=checkbox] {
+            width: 1em;
+        }
 
-            .best_in_place {
-                padding: .1m;
-                cursor: hand;
-                cursor: pointer;
-                -moz-transition: background 0.5s linear;
-                -o-transition: background 0.5s linear;
-                -webkit-transition: background 0.5s linear;
-                -moz-border-radius: 5px;
-                -webkit-border-radius: 5px;
-                -o-border-radius: 5px;
-                -ms-border-radius: 5px;
-                -khtml-border-radius: 5px;
-                border-radius: 5px;
-            }
-            .best_in_place:hover, #user_account .do_hover {
-                padding-right: 1.5em;
-                background: url("/images/red_pen.png") no-repeat right;
-                background-color: #CCC;
-            }
-            .info_edit {
-                float: right;
-                cursor: hand;
-                cursor: pointer;
-            }
+        .best_in_place {
+            padding: .1m;
+            cursor: hand;
+            cursor: pointer;
+            -moz-transition: background 0.5s linear;
+            -o-transition: background 0.5s linear;
+            -webkit-transition: background 0.5s linear;
+            -moz-border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -o-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -khtml-border-radius: 5px;
+            border-radius: 5px;
+        }
+        .best_in_place:hover, #user_account .do_hover {
+            padding-right: 1.5em;
+            background: url("/static/ureport/images/red_pen.png") no-repeat right;
+            background-color: #CCC;
+        }
+        .info_edit {
+            float: right;
+            cursor: hand;
+            cursor: pointer;
+        }
 
-                /* Missatges Flotants */
+        /* Missatges Flotants */
 
-            .purr {
-                position: fixed;
-                width: 324px;
-                top: 20px;
-                right: 15px;
-                padding: 20px;
-                background-color: #000000;
-                color: #FFFFFF;
-                border: 2px solid #FFFFFF;
-            }
-            .purr:hover .close	{
-                position: absolute;
-                top: 5px;
-                right: 3px;
-                display: block;
-                width: 25px;
-                height: 25px;
-                text-indent: -9999px;
-                background: url("/images/close-button.gif") no-repeat;
-            }
-        </style>
+        .purr {
+            position: fixed;
+            width: 324px;
+            top: 20px;
+            right: 15px;
+            padding: 20px;
+            background-color: #000000;
+            color: #FFFFFF;
+            border: 2px solid #FFFFFF;
+        }
+        .purr:hover .close	{
+            position: absolute;
+            top: 5px;
+            right: 3px;
+            display: block;
+            width: 25px;
+            height: 25px;
+            text-indent: -9999px;
+            background: url("/static/ureport/images/close-button.gif") no-repeat;
+        }
+    </style>
 {% endblock %}
- {% block extra_js %}
-  <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/jquery-ui.css"/>
+{% block extra_js %}
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/jquery-ui.css"/>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/dropdown.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/tabs.js"></script>
+    <script>
+    var cat = '';
+    $(document).ready(function(){
 
+
+        $('#give_group_form').submit(function(e){
+            var name = $('#g_name').val();
+            $.post("{% url view_poll poll.pk %}", {g_name: name, category: cat}).done(function(data){
+                if(data == 'success'){
+            $('#id_resp').text('You\'ll receive and email when all contacts are added' );
+                    }else{
+                    $('#id_resp').text('Something went wrong, please try again later' );
+                }
+              });
+            return false;
+        })
+        });
+    function load_give_group_form(category_id){
+            cat = category_id;
+            $("#give_group").show();
+        }
+    </script>
 {% endblock %}
-        {%block top_js %}
+{%block top_js %}
 
-        <script type="text/javascript">
-            function loadViewable(href){
-
-
-                    $('#state_h').load(href);
-
-            }
-
-            function bind_ruleform(){
-                $("#rule_form").bind('ajax:before',function (exhr, status, error) {
-                    ajax_loading('#rule_cont');
-
-                })
-                        .bind('ajax:success', function(evt, data, status, xhr) {
-
-                            $('#rule_result').html(xhr.responseText);
-                            $('#rule_result').effect("highlight", {}, 3000);
-                            $('.ajax_loading').remove();
+    <script type="text/javascript">
+        function loadViewable(href){
 
 
-                        })
-                        .bind('ajax:failure', function(evt, data, status, xhr) {
-                            alert("something went wrong!");
-                        });
-            }
-            function bind_form(){
-                $("#category_form").bind('ajax:before',function (exhr, status, error) {
-                    ajax_loading('#cat_tb');
+            $('#state_h').load(href);
 
-                })
-                        .bind('ajax:success', function(evt, data, status, xhr) {
-                            var $form = $(this);
+        }
 
-                            // Insert response partial into page below the form.
+        function bind_ruleform(){
+            $("#rule_form").bind('ajax:before',function (exhr, status, error) {
+                ajax_loading('#rule_cont');
 
-                            $('#category').html(xhr.responseText);
-                            $('#category').effect("highlight", {}, 3000);
-                            $('.ajax_loading').remove();
+            })
+                    .bind('ajax:success', function(evt, data, status, xhr) {
+
+                        $('#rule_result').html(xhr.responseText);
+                        $('#rule_result').effect("highlight", {}, 3000);
+                        $('.ajax_loading').remove();
 
 
-                        })
-                        .bind('ajax:failure', function(evt, data, status, xhr) {
-                            alert("something went wrong!");
-                        });
-            }
-            $(function() {
+                    })
+                    .bind('ajax:failure', function(evt, data, status, xhr) {
+                        alert("something went wrong!");
+                    });
+        }
+        function bind_form(){
+            $("#category_form").bind('ajax:before',function (exhr, status, error) {
+                ajax_loading('#cat_tb');
 
-                bind_form();
-                jQuery(".best_in_place").best_in_place();
+            })
+                    .bind('ajax:success', function(evt, data, status, xhr) {
+                        var $form = $(this);
 
+                        // Insert response partial into page below the form.
 
-                bind_poll_action()
-
-
-
-            });
-
-            function bind_poll_action() {
-                $('#poll_action')
-                   .bind('ajax:before',function (exhr, status, error) { ajax_loading('#poll_action');})
-                   .bind('ajax:success', function (evt, data, status, xhr) {
-                            $('#state').html(xhr.responseText);
-                            $('#state').effect("highlight", {}, 3000);
-                            $('.ajax_loading').remove();
-                            bind_poll_action();
-                   });
-            }
-
-        </script>
+                        $('#category').html(xhr.responseText);
+                        $('#category').effect("highlight", {}, 3000);
+                        $('.ajax_loading').remove();
 
 
-        {%endblock %}
+                    })
+                    .bind('ajax:failure', function(evt, data, status, xhr) {
+                        alert("something went wrong!");
+                    });
+        }
+        $(function() {
+
+            bind_form();
+            jQuery(".best_in_place").best_in_place();
+
+
+            bind_poll_action()
+
+
+
+        });
+
+        function bind_poll_action() {
+            $('#poll_action')
+                    .bind('ajax:before',function (exhr, status, error) { ajax_loading('#poll_action');})
+                    .bind('ajax:success', function (evt, data, status, xhr) {
+                        $('#state').html(xhr.responseText);
+                        $('#state').effect("highlight", {}, 3000);
+                        $('.ajax_loading').remove();
+                        bind_poll_action();
+                    });
+        }
+
+    </script>
+
+
+{%endblock %}
 
 {% block content %}
 
-  <div ><h3 style="font-weight: 300;font-size:22px;">{{ poll.name }}({{ poll.contacts.count }} {% trans "participant" %}{{ poll.contacts.count|pluralize }})</h3>
-</div>
-<div style="color:#666;font-size:16px;"">
-<span class='best_in_place' id='best_in_place_poll_question' data-url='/view_poll/{{poll.pk}}/?edit=true' data-object='poll'
-      data-attribute='question' data-type='input' >{{ poll.question }}</span>
+    <div ><h3 style="font-weight: 300;font-size:22px;">{{ poll.name }}({{ poll.contacts.count }} {% trans "participant" %}{{ poll.contacts.count|pluralize }})</h3>
+    </div>
+    <div style="color:#666;font-size:16px;">
+    <span class='best_in_place' id='best_in_place_poll_question' data-url='/view_poll/{{poll.pk}}/?edit=true' data-object='poll'
+          data-attribute='question' data-type='input' >{{ poll.question }}</span>
 
-</div>
-<div style="border: 1px solid #DDD;
+    </div>
+    <div style="border: 1px solid #DDD;
 font-size: 12px;
 font-style: italic;
 margin-right: 10px;
@@ -175,125 +196,144 @@ color:#666;">{% trans "Response" %}:
 <span class='best_in_place' id='best_in_place_poll_default_response' data-url='/view_poll/{{poll.pk}}/?edit=true' data-object='poll'
       data-attribute='default_response' data-type='input' >{{ poll.default_response }}</span>
 
-</div>
-</div>
-{%if not  poll.start_date%}
-<span id="state" >
+    </div>
+    </div>
+    {%if not  poll.start_date%}
+        <span id="state" >
 <a href="?start=True?&poll=True" data-remote=true  id="poll_action" class="btn">{% if FEATURE_PREPARE_SEND_POLL %}{% trans "Prepare Poll" %}{%else%}{% trans "Start Poll" %}{%endif%}</a>
 </span>
-{% trans "click on question to edit" %}
-{%else%}
-    {%if FEATURE_PREPARE_SEND_POLL and poll.is_ready_to_send %}
-<span id="state" >
+        {% trans "click on question to edit" %}
+    {%else%}
+        {%if FEATURE_PREPARE_SEND_POLL and poll.is_ready_to_send %}
+            <span id="state" >
 <a href="?send=True?&poll=True" data-remote=true  id="poll_action" class="btn">Send Poll</a>
 </span>
-    {%else%}
-        {% if not poll.end_date %}
-<span id="state" >
+        {%else%}
+            {% if not poll.end_date %}
+                <span id="state" >
 <a href="?stop=True&poll=True" data-remote=true  id="poll_action" class="btn">{% trans "Close Poll" %}</a>
  </span>
-        {%else%}
-<span id="state" >
+            {%else%}
+                <span id="state" >
 <a href="?reopen=True&poll=True" data-remote=true id="poll_action" class="btn">{% trans "Reopen Poll" %}</a>
 </span>
+            {%endif%}
         {%endif%}
+
     {%endif%}
 
-{%endif%}
 
 
-
-{% if not poll.viewable %}
-    <span id="state_h" >
+    {% if not poll.viewable %}
+        <span id="state_h" >
 <a href="javascript:void(0)" id="poll_v" class="btn" onclick="loadViewable('?viewable=True&poll=True')">{% trans "Show On Home page" %}</a>
 </span>
- {% else %}
-    <span id="state_h" >
+    {% else %}
+        <span id="state_h" >
 <a href="javascript:void(0)" id="poll_v" class="btn" onclick="loadViewable('?unviewable=True&poll=True')">{% trans "Don't Show on home page" %}</a>
 </span>
-{% endif %}
+    {% endif %}
 
-<h3>{% trans "Groups" %}</h3>
-{% for group in groups %}
-<span style="border:1px solid #ccc;padding:3px;">{{group.name}}</span>
+    <h3>{% trans "Groups" %}</h3>
+    {% for group in groups %}
+        <span style="border:1px solid #ccc;padding:3px;">{{group.name}}</span>
 
-{%endfor%}
+    {%endfor%}
 
-<form action="">
-{% csrf_token %}
+    <form action="">
+        {% csrf_token %}
 
 
-<table width="100%" class="results">
-<thead>
-<tr>
-<th class="category_name_col">{% trans "Name" %}</th>
-<th class="category_response_col">{% trans "Response Message" %}</th>
+        <table width="100%" class="results">
+            <thead>
+            <tr>
+                <th class="category_name_col">{% trans "Name" %}</th>
+                <th class="category_response_col">{% trans "Response Message" %}</th>
 
-<th class="category_default_col">{% trans "Is Default" %}</th>
-<th class="category_options_col"></th>
-</tr>
-</thead>
-{% for category in categories %}
-    <tr>
-        {% include "ureport/polls/view_category.html" %}
-    </tr>
-{% endfor %}
-<tr id="new_category_box">
-</tr>
-</table>
-</form>
-<br/>
-
-<script type="text/javascript">
-
-</script>
-
-<div  class="modal hide" id="category">
-    <form method="post" id="category_form" action="./?category=true" data-remote=true>
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
-        <h3>{% trans "Create A new Category" %}</h3>
-    </div>
-    <div class="modal-body" >
-        <table id="cat_tb">
-
-        {{category_form.as_table}}
-
+                <th class="category_default_col">{% trans "Is Default" %}</th>
+                <th class="category_options_col"></th>
+            </tr>
+            </thead>
+            {% for category in categories %}
+                <tr>
+                    {% include "ureport/polls/view_category.html" %}
+                </tr>
+            {% endfor %}
+            <tr id="new_category_box">
+            </tr>
         </table>
-    </div>
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn" onclick='$(".modal").hide()'>{% trans "Close" %}</a>
-        <input type="submit"  class="btn btn-primary" value="{% trans "Next" %}">
-    </div>
     </form>
-</div>
-<div  class="modal hide" id="edit_category">
+    <br/>
+
+    <script type="text/javascript">
+
+    </script>
+
+    <div  class="modal hide" id="category">
+        <form method="post" id="category_form" action="./?category=true" data-remote=true>
+            <div class="modal-header">
+                <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
+                <h3>{% trans "Create A new Category" %}</h3>
+            </div>
+            <div class="modal-body" >
+                <table id="cat_tb">
+
+                    {{category_form.as_table}}
+
+                </table>
+            </div>
+            <div class="modal-footer">
+                <a href="#" data-dismiss="modal" class="btn" onclick='$(".modal").hide()'>{% trans "Close" %}</a>
+                <input type="submit"  class="btn btn-primary" value="{% trans "Next" %}">
+            </div>
+        </form>
+    </div>
+    <div  class="modal hide" id="give_group">
+        <form method="get" id="give_group_form" data-remote=true>
+            <div class="modal-header">
+                <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
+                <h3>{% trans "Give Category a Group" %}</h3>
+            </div>
+            <div class="modal-body" >
+                <h3 id_resp>{% trans "Please make sure the group is already in Ureport" %}</h3>
+                <p>
+                    <input type="text" name="group" placeholder="Put group name" id="g_name">
+                </p>
+            </div>
+            <div class="modal-footer">
+                <a href="#" data-dismiss="modal" class="btn" onclick='$(".modal").hide()'>{% trans "Close" %}</a>
+                <input type="submit"  class="btn btn-primary" value="{% trans "Create" %}" onclick="">
+            </div>
+        </form>
+    </div>
+    <div  class="modal hide" id="edit_category">
 
     </div>
 
-<div  class="modal hide" id="view_rules">
+    <div  class="modal hide" id="view_rules">
 
-</div>
-
-
-<a data-toggle="modal" href="#category" onclick='$("#category").show()' class="btn">{% trans "Add Category" %}</a>
-<br/><br/>
+    </div>
 
 
+    <a data-toggle="modal" href="#category" onclick='$("#category").show()' class="btn">{% trans "Add Category" %}</a>
+    <br/><br/>
 
 
 
-<div id="error"></div>
-        <div style="margin:auto;width:340px;">
-            <form action="" method="POST" data-remote=true>
-        <h1>{% trans "Ussd Menu" %}</h1>
+
+
+    <div id="error"></div>
+    <div style="margin:auto;width:340px;">
+        <form action="" method="POST" data-remote=true>
+            <h1>{% trans "Ussd Menu" %}</h1>
             <TEXTAREA NAME="question" COLS=15 ROWS=2 length=150 wrap="soft" >{{xf.question}}</TEXTAREA>
 
 
             <TEXTAREA NAME="response" COLS=15 ROWS=2   length="150" wrap="soft">{{response.text}}</TEXTAREA>
 
 
-        <input value="{% trans "Save Menu  Edits" %}" class="btn" style="width:120px;" type="submit" >
-        </div>
-</form>
+            <input value="{% trans "Save Menu  Edits" %}" class="btn" style="width:120px;" type="submit" >
+        </form>
+    </div>
+
 {%endblock%}
