--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -78,12 +78,7 @@
     <div class="footer">
         <div class="sponsors">
             {% trans "Supported by" %}:
-            <img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
-            <img src="{{ MEDIA_URL }}ureport/images/brac_logo.png"/>
-            <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
-            <img src="{{ MEDIA_URL }}ureport/images/cou_logo.png"/>
-            <img src="{{ MEDIA_URL }}ureport/images/gem_logo.png"/>
-            <img src="{{ MEDIA_URL }}ureport/images/ibm_logo.jpg" />
+            {% include 'ureport/footer_links.html' %}
         </div>
         <div class="footerlinks">
             <div class="nav-bottom">
