--- a/ureport/templates/registration/password_reset_complete.html
+++ b/ureport/templates/registration/password_reset_complete.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% load i18n %}
 
 {% block title %}Password reset complete{% endblock %}
 
@@ -6,5 +7,5 @@
 
 {% block content %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
-<p><a href="{{ login_url }}">Log in>/a></p>
+<p><a href="{{ login_url }}">{% trans 'Log in' %}</a></p>
 {% endblock %}
