Use /about_ureport for all links to the about page

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -85,7 +85,7 @@
                 <ul>
                     <li class="first"><a href="/">{% trans "HOME" %}</a></li>
                     <li><a href="/#poll_results">{% trans "POLL RESULTS" %}</a></li>
-                    <li><a href="about_ureport">{% trans "ABOUT UREPORT" %}</a></li>
+                    <li><a href="/about_ureport">{% trans "ABOUT UREPORT" %}</a></li>
                     <li><a href="/join/">{% trans "HOW TO JOIN" %}</a></li>
                     <!-- <li><a href="#">SITE MAP</a></li>
                     <li><a href="#">CONTACT US</a></li> -->
