--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -102,7 +102,7 @@
                 <ul>
 	                <li class="first"><a href="/">{% trans "HOME" %}</a></li>
 	                <li><a href="/#poll_results">{% trans "POLL RESULTS" %}</a></li>
-	                <li><a href="about_ureport">{% trans "ABOUT UREPORT" %}</a></li>
+	                <li><a href="/about_ureport/">{% trans "ABOUT UREPORT" %}</a></li>
 	                <li><a href="/join/">{% trans "HOW TO JOIN" %}</a></li>
                     <li><a href="{% url pulse %}">{% trans "NATIONAL PULSE" %}</a> </li>
 	                {% if user.is_authenticated %}
