--- a/ureport/templates/ureport/plugins/addthis.html
+++ b/ureport/templates/ureport/plugins/addthis.html
@@ -1,6 +1,6 @@
 <!-- AddThis Smart Layers BEGIN -->
 <!-- Go to http://www.addthis.com/get/smart-layers to customize -->
-<div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="right:0;bottom:50px;">
+<div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="left:300px;bottom:200px;">
     <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
     <a class="addthis_button_tweet" tw:count="vertical"></a>
     <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
