Visualize the time on witch the last message came

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -19,7 +19,7 @@
     <div id="viz">
     </div>
     <div class="scrolltop">
-	<span>{% trans "PREVIOUS POLLS" %}</span>
+	<span>{% blocktrans %} PREVIOUS POLLS.    The last message is received at : {{timelastmsg}} {% endblocktrans %}</span>
     </div>
     <a name="poll_results"></a>
         {% block poll_list %}
